syntax = "proto3";

option java_multiple_files = true;
option java_package = "pathfinder.data.v2";

package v2;

import "v2/CharacterEffect.proto";
import "v2/CharacterChoice.proto";

message ModifierDatabaseDbo {
  string database_id = 1;
  repeated ModifierSummaryDbo summaries = 2;
}

message ModifierSummaryDbo {
  string id = 1;
  string name = 2;
}

message ModifierDetailsDbo {
  string id = 1;
  string name = 2;
  repeated CharacterEffectDbo effects = 3;

  string descriptionText = 100;
  string effectText = 101;
}